--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+    - name: checkout master
+      uses: actions/checkout@master 
+      
     - name: Hello world action step
       id: hello
-      uses: actions/checkout@master
       uses: ./action
       with:
         who-to-greet: 'Happy Cat'
